add echo tag ...

--- a/concept/hello-in.html
+++ b/concept/hello-in.html
@@ -3,7 +3,7 @@
 <HEAD>
 <TITLE>Enscript Output</TITLE>
 </HEAD>
-<!-- BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#1F00FF" ALINK="#FF0000" VLINK="#9900DD" -->
+<BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#1F00FF" ALINK="#FF0000" VLINK="#9900DD">
 <A NAME="top">
 <A NAME="file1">
 <H1>hello.ghci</H1>
