--- a/concept/test-in-raw.html
+++ b/concept/test-in-raw.html
@@ -15,35 +15,35 @@ input:target { background-color: #DDDDDD; }
 </style>
 
 <PRE>
-<a href = 'test-out-raw.html#CMD00001', id='CMD00001'' class='input' target='out'>
+<a href = 'test-out-raw.html#CMD00001', id='CMD00001' class='input' target='out'>
 :set +t
-</a><a href = 'test-out-raw.html#CMD00002', id='CMD00002'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00002', id='CMD00002' class='input' target='out'>
 :m + Control.Monad
-</a><a href = 'test-out-raw.html#CMD00003', id='CMD00003'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00003', id='CMD00003' class='input' target='out'>
 :browse Control.Monad
-</a><a href = 'test-out-raw.html#CMD00004', id='CMD00004'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00004', id='CMD00004' class='input' target='out'>
 :{
 print $
    <B><FONT COLOR="#BC8F8F">&quot;Hello&quot;</FONT></B>
    ++
    <B><FONT COLOR="#BC8F8F">&quot;World&quot;</FONT></B>
 :}
-</a><a href = 'test-out-raw.html#CMD00005', id='CMD00005'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00005', id='CMD00005' class='input' target='out'>
 3 + 4
-</a><a href = 'test-out-raw.html#CMD00006', id='CMD00006'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00006', id='CMD00006' class='input' target='out'>
 <B><FONT COLOR="#BC8F8F">&quot;aaa&lt;bbb&gt;ccc&quot;</FONT></B>
-</a><a href = 'test-out-raw.html#CMD00007', id='CMD00007'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00007', id='CMD00007' class='input' target='out'>
 :m + Network.URI.Encode
-</a><a href = 'test-out-raw.html#CMD00008', id='CMD00008'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00008', id='CMD00008' class='input' target='out'>
 <B><FONT COLOR="#A020F0">data</FONT></B> GHCIMONRAW = GHCIMONRAW String <B><FONT COLOR="#A020F0">deriving</FONT></B> Show
-</a><a href = 'test-out-raw.html#CMD00009', id='CMD00009'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00009', id='CMD00009' class='input' target='out'>
 GHCIMONRAW (encode <B><FONT COLOR="#BC8F8F">&quot;&lt;img alt='picsum' src='https://picsum.photos/200/300'&gt;&quot;</FONT></B>)
-</a><a href = 'test-out-raw.html#CMD00010', id='CMD00010'' class='input' target='out'>
-</a><a href = 'test-out-raw.html#CMD00011', id='CMD00011'' class='input' target='out'>
-</a><a href = 'test-out-raw.html#CMD00012', id='CMD00012'' class='input' target='out'>
-</a><a href = 'test-out-raw.html#CMD00013', id='CMD00013'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00010', id='CMD00010' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00011', id='CMD00011' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00012', id='CMD00012' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00013', id='CMD00013' class='input' target='out'>
 9 + 7
-</a><a href = 'test-out-raw.html#CMD00014', id='CMD00014'' class='input' target='out'>
-</a><a href = 'test-out-raw.html#CMD00015', id='CMD00015'' class='input' target='out'>
-</a><a href = 'test-out-raw.html#CMD00016', id='CMD00016'' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00014', id='CMD00014' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00015', id='CMD00015' class='input' target='out'>
+</a><a href = 'test-out-raw.html#CMD00016', id='CMD00016' class='input' target='out'>
 </a>
