--- a/concept/test-out-raw.html
+++ b/concept/test-out-raw.html
@@ -16,7 +16,7 @@ a:focus.output { background-color: yellow; }
 
 <PRE>
 GHCi, version 8.0.2: http://www.haskell.org/ghc/  :? for help
-<a id='CMD00001' class='output'>' href='test-in-raw.html#CMD00001' target='in'
+<a id='CMD00001' class='output' href='test-in-raw.html#CMD00001' target='in'>
 </a><a id='CMD00002' class='output'' href='test-in-raw.html#CMD00002' target='in'>
 </a><a id='CMD00003' class='output'' href='test-in-raw.html#CMD00003' target='in'>
 </FONT></B>(&lt;$!&gt;) <B><FONT COLOR="#228B22">:: Monad m =&gt; (a -&gt; b) -&gt; m a -&gt; m b
