--- a/concept/test-out-raw.html
+++ b/concept/test-out-raw.html
@@ -16,9 +16,9 @@ div.output:target { background-color: #DDDDDD; }
 
 <PRE>
 GHCi, version 8.0.2: http://www.haskell.org/ghc/  :? for help
-<div id='CMD00001' class='output'><a href='test-in-raw.html#CMD00001' target='in'>
-</a></div><div id='CMD00002' class='output'><a href='test-in-raw.html#CMD00002' target='in'>
-</a></div><div id='CMD00003' class='output'><a href='test-in-raw.html#CMD00003' target='in'>
+<div id='CMD00001' class='output'><a href='test-in-raw.html#CMD00001' class='output' target='in'>
+</a></div><div id='CMD00002' class='output'><a href='test-in-raw.html#CMD00002' class='output' target='in'>
+</a></div><div id='CMD00003' class='output'><a href='test-in-raw.html#CMD00003' class='output' target='in'>
 </FONT></B>(&lt;$!&gt;) <B><FONT COLOR="#228B22">:: Monad m =&gt; (a -&gt; b) -&gt; m a -&gt; m b
 </FONT></B>(&lt;=&lt;) <B><FONT COLOR="#228B22">:: Monad m =&gt; (b -&gt; m c) -&gt; (a -&gt; m b) -&gt; a -&gt; m c
 </FONT></B>(&gt;=&gt;) <B><FONT COLOR="#228B22">:: Monad m =&gt; (a -&gt; m b) -&gt; (b -&gt; m c) -&gt; a -&gt; m c
@@ -79,28 +79,28 @@ mapM_ <B><FONT COLOR="#228B22">:: (Foldable t, Monad m) =&gt; (a -&gt; m b) -&gt
 </FONT></B>sequence_ <B><FONT COLOR="#228B22">:: (Foldable t, Monad m) =&gt; t (m a) -&gt; m ()
 </FONT></B>void <B><FONT COLOR="#228B22">:: Functor f =&gt; f a -&gt; f ()
 </FONT></B>when <B><FONT COLOR="#228B22">:: Applicative f =&gt; Bool -&gt; f () -&gt; f ()
-</a></div><div id='CMD00004' class='output'><a href='test-in-raw.html#CMD00004' target='in'>
+</a></div><div id='CMD00004' class='output'><a href='test-in-raw.html#CMD00004' class='output' target='in'>
 </FONT></B><B><FONT COLOR="#BC8F8F">&quot;HelloWorld&quot;</FONT></B>
 it <B><FONT COLOR="#228B22">:: ()
-</a></div><div id='CMD00005' class='output'><a href='test-in-raw.html#CMD00005' target='in'>
+</a></div><div id='CMD00005' class='output'><a href='test-in-raw.html#CMD00005' class='output' target='in'>
 </FONT></B>7
 it <B><FONT COLOR="#228B22">:: Num a =&gt; a
-</a></div><div id='CMD00006' class='output'><a href='test-in-raw.html#CMD00006' target='in'>
+</a></div><div id='CMD00006' class='output'><a href='test-in-raw.html#CMD00006' class='output' target='in'>
 </FONT></B><B><FONT COLOR="#BC8F8F">&quot;aaa&lt;bbb&gt;ccc&quot;</FONT></B>
 it <B><FONT COLOR="#228B22">:: [Char]
-</a></div><div id='CMD00007' class='output'><a href='test-in-raw.html#CMD00007' target='in'>
-</a></div><div id='CMD00008' class='output'><a href='test-in-raw.html#CMD00008' target='in'>
+</a></div><div id='CMD00007' class='output'><a href='test-in-raw.html#CMD00007' class='output' target='in'>
+</a></div><div id='CMD00008' class='output'><a href='test-in-raw.html#CMD00008' class='output' target='in'>
 </FONT></B><B><FONT COLOR="#A020F0">data</FONT></B> GHCIMONRAW = GHCIMONRAW String
-</a></div><div id='CMD00009' class='output'><a href='test-in-raw.html#CMD00009' target='in'>
+</a></div><div id='CMD00009' class='output'><a href='test-in-raw.html#CMD00009' class='output' target='in'>
 <img alt='picsum' src='https://picsum.photos/700/200'>
 it <B><FONT COLOR="#228B22">:: GHCIMONRAW
-</a></div><div id='CMD00010' class='output'><a href='test-in-raw.html#CMD00010' target='in'>
-</a></div><div id='CMD00011' class='output'><a href='test-in-raw.html#CMD00011' target='in'>
-</a></div><div id='CMD00012' class='output'><a href='test-in-raw.html#CMD00012' target='in'>
-</a></div><div id='CMD00013' class='output'><a href='test-in-raw.html#CMD00013' target='in'>
+</a></div><div id='CMD00010' class='output'><a href='test-in-raw.html#CMD00010' class='output' target='in'>
+</a></div><div id='CMD00011' class='output'><a href='test-in-raw.html#CMD00011' class='output' target='in'>
+</a></div><div id='CMD00012' class='output'><a href='test-in-raw.html#CMD00012' class='output' target='in'>
+</a></div><div id='CMD00013' class='output'><a href='test-in-raw.html#CMD00013' class='output' target='in'>
 </FONT></B>16
 it <B><FONT COLOR="#228B22">:: Num a =&gt; a
-</a></div><div id='CMD00014' class='output'><a href='test-in-raw.html#CMD00014' target='in'>
-</a></div><div id='CMD00015' class='output'><a href='test-in-raw.html#CMD00015' target='in'>
-</a></div><div id='CMD00016' class='output'><a href='test-in-raw.html#CMD00016' target='in'>
+</a></div><div id='CMD00014' class='output'><a href='test-in-raw.html#CMD00014' class='output' target='in'>
+</a></div><div id='CMD00015' class='output'><a href='test-in-raw.html#CMD00015' class='output' target='in'>
+</a></div><div id='CMD00016' class='output'><a href='test-in-raw.html#CMD00016' class='output' target='in'>
 </a></div>
