--- a/concept/test-out-raw.html
+++ b/concept/test-out-raw.html
@@ -92,7 +92,7 @@ it <B><FONT COLOR="#228B22">:: [Char]
 </a></div><div id='CMD00008' class='output'><a href='test-in-raw.html#CMD00008' class='output' target='in'>
 </FONT></B><B><FONT COLOR="#A020F0">data</FONT></B> GHCIMONRAW = GHCIMONRAW String
 </a></div><div id='CMD00009' class='output'><a href='test-in-raw.html#CMD00009' class='output' target='in'>
-<img alt='picsum' src='https://picsum.photos/700/200'>
+&quot;<img alt='picsum' src='https://picsum.photos/200/300'>&quot;
 it <B><FONT COLOR="#228B22">:: GHCIMONRAW
 </a></div><div id='CMD00010' class='output'><a href='test-in-raw.html#CMD00010' class='output' target='in'>
 </FONT></B>16
