--- a/concept/test-in-raw.html
+++ b/concept/test-in-raw.html
@@ -23,16 +23,17 @@ div.input:target { background-color: #DDDDDD; }
 :browse Control.Monad
 </a></div><div class='input' id='CMD00004'><a href = 'test-out-raw.html#CMD00004', class='input' target='out'>
 </a></div><div class='input' id='CMD00005'><a href = 'test-out-raw.html#CMD00005', class='input' target='out'>
-3 + 4
 </a></div><div class='input' id='CMD00006'><a href = 'test-out-raw.html#CMD00006', class='input' target='out'>
-<B><FONT COLOR="#BC8F8F">&quot;aaa&lt;bbb&gt;ccc&quot;</FONT></B>
+3 + 4
 </a></div><div class='input' id='CMD00007'><a href = 'test-out-raw.html#CMD00007', class='input' target='out'>
-:m + Network.URI.Encode
+<B><FONT COLOR="#BC8F8F">&quot;aaa&lt;bbb&gt;ccc&quot;</FONT></B>
 </a></div><div class='input' id='CMD00008'><a href = 'test-out-raw.html#CMD00008', class='input' target='out'>
-<B><FONT COLOR="#A020F0">data</FONT></B> GHCIMONRAW = GHCIMONRAW String <B><FONT COLOR="#A020F0">deriving</FONT></B> Show
+:m + Network.URI.Encode
 </a></div><div class='input' id='CMD00009'><a href = 'test-out-raw.html#CMD00009', class='input' target='out'>
-GHCIMONRAW (encode <B><FONT COLOR="#BC8F8F">&quot;&lt;img alt='picsum' src='https://picsum.photos/200/300'&gt;&quot;</FONT></B>)
+<B><FONT COLOR="#A020F0">data</FONT></B> GHCIMONRAW = GHCIMONRAW String <B><FONT COLOR="#A020F0">deriving</FONT></B> Show
 </a></div><div class='input' id='CMD00010'><a href = 'test-out-raw.html#CMD00010', class='input' target='out'>
-9 + 7
+GHCIMONRAW (encode <B><FONT COLOR="#BC8F8F">&quot;&lt;img alt='picsum' src='https://picsum.photos/200/300'&gt;&quot;</FONT></B>)
 </a></div><div class='input' id='CMD00011'><a href = 'test-out-raw.html#CMD00011', class='input' target='out'>
+9 + 7
+</a></div><div class='input' id='CMD00012'><a href = 'test-out-raw.html#CMD00012', class='input' target='out'>
 </a></div>
