--- a/concept/test-in-raw.html
+++ b/concept/test-in-raw.html
@@ -23,6 +23,13 @@ div.input:target { background-color: #DDDDDD; }
 :browse Control.Monad
 </a></div><div class='input' id='CMD00004'><a href = 'test-out-raw.html#CMD00004', class='input' target='out'>
 </a></div><div class='input' id='CMD00005'><a href = 'test-out-raw.html#CMD00005', class='input' target='out'>
+:{
+print $
+   <B><FONT COLOR="#BC8F8F">&quot;Hello&quot;</FONT></B>
+   ++
+   <B><FONT COLOR="#BC8F8F">&quot;World&quot;</FONT></B>
+
+:}
 </a></div><div class='input' id='CMD00006'><a href = 'test-out-raw.html#CMD00006', class='input' target='out'>
 3 + 4
 </a></div><div class='input' id='CMD00007'><a href = 'test-out-raw.html#CMD00007', class='input' target='out'>
